A6.3 fix backend: PUT request of modules uses path variable id instead of id in body